Edited index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE HTML>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
+</head>
+<body>
+<title>Alan Nguyen</title>
+<p>Hello there! I'm a second-year undergraduate student based in the San Francisco Bay Area. My main interests lie in Statistics, Economics, and Film.</p>
+
+<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. Through the lens can one make so much meaning. In here, you will see a collection of recent films that I have past watched (and my personal ratings), as well as a portfolio of the past photos I have taken.</p>
+
+<p>I also am deeply vested in the realm of numbers, where I enjoy pondering about the infinite stacks of data that we face today. I hope to decipher what that data really means, and make an impact on <i>our</i> world, someday.</p>
+
+</body>
+</html>
