revamped and added lots of html

--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>alan</title>
 	</head>
-	<div id=wrapper>
 	<body>
+		<div class=wrapper>
 		<div id=sidebar>
 			<a href="index.html" class=sidebar>home</a><br>
-			<a href="index.html" class=sidebar>film</a><br>
-			<a href="index.html" class=sidebar>projects</a><br>
-			<a href="index.html" class=sidebar>photo</a><br>
+			<a href="../film/film.html" class=sidebar>film</a><br>
+			<a href="../projects/projects.html" class=sidebar>projects</a><br>
+			<a href="../photo/photo.html" class=sidebar>photo</a><br>
 		</div>
 
 		<h1>Alan Nguyen</h1>
 		<p>Hello there! I'm a second-year undergraduate student based in the San Francisco Bay Area. My main interests lie in Statistics, Economics, and Film.</p>
 
-		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. Through the lens can one make so much meaning. In here, you will see a collection of recent films that I have past watched (and my personal ratings), as well as a portfolio of the past photos I have taken.</p>
+		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. In here, you will see a collection of recent films that I have past watched (and my personal ratings), as well as a portfolio of the past photos I have taken.</p>
 
-		<p>I am also deeply vested in the realm of numbers, where I enjoy pondering about the infinite stacks of data that we face today. I am currently self-studying topics regarding Machine Learning and Probability. I hope to decipher what that data really means, and make an impact on <i>our</i> world, someday.</p>
+		<p>I am also deeply vested in the realm of numbers, where I enjoy pondering about the infinite stacks of data that we face today. The projects that I participated in are articulated in its respective section. I hope to decipher what that data really means, and make an impact on <i>our</i> world, someday.</p>
 
-		<p class=copy>Copyright © All rights reserved.</p>
+		<p id=copy>Copyright © All rights reserved.</p>
 	</div>
+	<script src="core.js"></script>
 	</body>
 </html>
