--- a/film/gonegirl.html
+++ b/film/gonegirl.html
@@ -2,7 +2,7 @@
 <!-- hi to those of you who read html comments
 	this is totally not my first website :^) -->
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="../style.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>gone girl</title>
@@ -10,10 +10,10 @@
 	<body>
 		<div class=wrapper>
 		<div id=sidebar>
-			<a href="index.html" class=sidebar>home</a><br>
-			<a href="../film.html" class=sidebar>film</a><br>
-			<a href="../projects.html" class=sidebar>projects</a><br>
-			<a href="../photo.html" class=sidebar>photo</a><br>
+			<a href="../index.html" class=sidebar>home</a><br>
+			<a href="film.html" class=sidebar>film</a><br>
+			<a href="../project/project.html" class=sidebar>projects</a><br>
+			<a href="../photo/photo.html" class=sidebar>photo</a><br>
 		</div>
 
 	<h1><i>Gone Girl</i></h1>
@@ -38,6 +38,6 @@
 
 	<p id=copy>Copyright © All rights reserved.</p>
 	</div>
-	<script src="core.js"></script>
+	<script src="../core.js"></script>
 	</body>
 </html>
