--- a/film/film.html
+++ b/film/film.html
@@ -2,7 +2,7 @@
 <!-- hi to those of you who read html comments
 	this is totally not my first website :^) -->
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="../style.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>film</title>
@@ -10,10 +10,10 @@
 	<body>
 		<div class=wrapper>
 		<div id=sidebar>
-			<a href="index.html" class=sidebar>home</a><br>
-			<a href="index.html" class=sidebar>film</a><br>
-			<a href="index.html" class=sidebar>projects</a><br>
-			<a href="index.html" class=sidebar>photo</a><br>
+			<a href="../index.html" class=sidebar>home</a><br>
+			<a href="film.html" class=sidebar>film</a><br>
+			<a href="../projects/projects.html" class=sidebar>projects</a><br>
+			<a href="../photo/photo.html" class=sidebar>photo</a><br>
 		</div>
 
 		<h2>Film</h2>
@@ -21,7 +21,7 @@
 			<p id=copy>*Click on any of the photos to read my opinions.</p>
 
 		<h3>Favorite Films:</h3>
-			<a href="../her.html"><img src="her.jpg"/></a>  
+			<a href="her.html"><img src="her.jpg"/></a>  
 			<img src="lost.jpg"/>  
 			<img src="grand.jpg"/>  
 
@@ -31,21 +31,14 @@
 			<img src="strange.jpg"/>
 
 		<h3>Reviews</h3>
-			<a href="../room.html"><img src="room.jpg"></a>
-			<a href="../exmachina.html"><img src="exmachina.jpg"></a>
-			<a href="../sniper.html"><img src="sniper.jpg"></a>
-			<a href="../interstellar.html"><img src="interstellar.jpg"></a>
-			<a href="../gonegirl.html"><img src="gonegirl.jpg"></a>
-
-
-
-		<!-- 
-		favorite films: her; synecdoche, new york; lost in translation; the grand budapest hotel
-		recents: moonlight, arrival, dr. strange	
-		-->
+			<a href="room.html"><img src="room.jpg"></a>
+			<a href="exmachina.html"><img src="exmachina.jpg"></a>
+			<a href="sniper.html"><img src="sniper.jpg"></a>
+			<a href="interstellar.html"><img src="interstellar.jpg"></a>
+			<a href="gonegirl.html"><img src="gonegirl.jpg"></a>
 
 		<p id=copy>Feel free to visit my letterbloxd profile <a href="http://letterboxd.com/carbine/">here!</a></p>
 	</div>
-	<script src="core.js"></script>
+	<script src="../core.js"></script>
 	</body>
 </html>
