--- a/film/film.html
+++ b/film/film.html
@@ -1,3 +1,4 @@
+
 <html>
 <!-- hi to those of you who read html comments
 	this is totally not my first website :^) -->
@@ -20,24 +21,19 @@
 			<p>Previously, I wrote a series of film-related articles for my high school's newspaper. This birthed my interest in dissecting films and analyzing them, critiquing them during my free time. Presented here, you will see the most recent films I have watched—as well as my all-time favorites—and how I feel about them in short excerpts.</p>
 			<p id=copy>*Click on any of the photos to read my opinions.</p>
 
-		<h3>Favorite Films:</h3>
-			<a href="her.html"><img src="her.jpg"/></a>  
-			<img src="lost.jpg"/>  
-			<img src="grand.jpg"/>  
+		<h3>Favorite films:</h3>
+			<a href="her.html"><img src="photos/her.jpg"/></a>  
+			<img src="photos/lost.jpg"/>  
+			<img src="photos/grand.jpg"/>  <!-- i'm totally not an existentialist. --> 
 
 		<h3>Recently watched:</h3>
-			<img src="moonlight.jpg"/>
-			<img src="arrival.jpg"/>
-			<img src="strange.jpg"/>
+			<img src="photos/moonlight.jpg"/>
+			<img src="photos/arrival.jpg"/>
+			<img src="photos/strange.jpg"/>
 
-		<h3>Reviews</h3>
-			<a href="room.html"><img src="room.jpg"></a>
-			<a href="exmachina.html"><img src="exmachina.jpg"></a>
-			<a href="sniper.html"><img src="sniper.jpg"></a>
-			<a href="interstellar.html"><img src="interstellar.jpg"></a>
-			<a href="gonegirl.html"><img src="gonegirl.jpg"></a>
-
-		<p id=copy>Feel free to visit my letterbloxd profile <a href="http://letterboxd.com/carbine/">here!</a></p>
+		<h3><a href="archives.html">Archives</h3></a>
+		
+		<p id=copy>Feel free to visit my letterbloxd profile <u><a href="http://letterboxd.com/carbine/">here!</a></u></p>
 	</div>
 	<script src="../core.js"></script>
 	</body>
