--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 		<div class=wrapper>
 		<div id=sidebar>
 			<a href="index.html" class=sidebar>home</a><br>
-			<a href="../film/film.html" class=sidebar>film</a><br>
-			<a href="../projects/projects.html" class=sidebar>projects</a><br>
-			<a href="../photo/photo.html" class=sidebar>photo</a><br>
+			<a href="film/film.html" class=sidebar>film</a><br>
+			<a href="project/project.html" class=sidebar>projects</a><br>
+			<a href="photo/photo.html" class=sidebar>photo</a><br>
 		</div>
 
 		<h1>Alan Nguyen</h1>
 		<p>Hello there! I'm a second-year undergraduate student based in the San Francisco Bay Area. My main interests lie in Statistics, Economics, and Film.</p>
 
-		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. In here, you will see a collection of recent films that I have past watched (and my personal ratings), as well as a portfolio of the past photos I have taken.</p>
+		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. In here, you will see a collection of recent films that I have past watched, as well as a portfolio of the past photos I have recently taken.</p>
 
 		<p>I am also deeply vested in the realm of numbers, where I enjoy pondering about the infinite stacks of data that we face today. The projects that I participated in are articulated in its respective section. I hope to decipher what that data really means, and make an impact on <i>our</i> world, someday.</p>
 
