--- a/project/project.html
+++ b/project/project.html
@@ -15,7 +15,14 @@
 			<a href="project.html" class=sidebar>projects</a><br>
 			<a href="../photo/photo.html" class=sidebar>photo</a><br>
 		</div>
-	<p>Coming soon!</p>
+	<h1>Projects</h1>
+	<p>In my spare time, I enjoy designing various projects that involve statistics and machine learning. I've recently started pursuing this field this year, so there will be more projects to come!</p>
+
+	<h2>Discord Bot</h2>
+	<p>With a team of three, we built an interactive bot, written in Python, intended for use on the application <b>Discord.</b> The bot joins a channel of its choice and can interact with guests by playing Hangman, Magic 8 Ball, Guessing Game, and more. It also gathers random images from Google and posts them in the channel by request.</p>
+
+	<h2>KarmaBot</h2>
+	<p>Under a team of six, written in Python, we designed a bot that processes comment and post information on Reddit. It uses markov chains and other algorithms in order to learn how to make comments and posts of their own. The bot's purpose is to gain the most upvotes.</p>
 	<!-- 
 		project ideas: make a bot that learns text/spam
 		long-term: master python, R, matlab; learn more cs
