--- a/film/archives.html
+++ b/film/archives.html
@@ -22,13 +22,13 @@
 
 
 		<!-- maybe make this an entirely new .html if i'm going to keep reviewing movies as a hobby -->
-			<a href="room.html"><img src="photos/room.jpg"/></a>
-			<a href="exmachina.html"><img src="photos/exmachina.jpg"/></a>
-			<a href="blackmirror.html"><img src="photos/blackmirror.jpg"/></a>
-			<a href="sniper.html"><img src="photos/sniper.jpg"/></a>
-			<a href="interstellar.html"><img src="photos/interstellar.jpg"/></a>
-			<a href="gonegirl.html"><img src="photos/gonegirl.jpg"/></a>
-
+			<a href="room.html"><img src="photos/room.jpg" class=movie></a>
+			<a href="exmachina.html"><img src="photos/exmachina.jpg" class=movie></a>
+			<a href="blackmirror.html"><img src="photos/blackmirror.jpg" class=movie></a>
+			<a href="sniper.html"><img src="photos/sniper.jpg" class=movie></a>
+			<a href="interstellar.html"><img src="photos/interstellar.jpg" class=movie></a>
+			<a href="gonegirl.html"><img src="photos/gonegirl.jpg" class=movie></a>
+			<span class="stretch"></span>
 		<p id=copy>Feel free to visit my letterbloxd profile <a href="http://letterboxd.com/carbine/">here!</a></p>
 	</div>
 	<script src="../core.js"></script>
