--- a/film/film.html
+++ b/film/film.html
@@ -13,7 +13,7 @@
 		<div id=sidebar>
 			<a href="../index.html" class=sidebar>home</a><br>
 			<a href="film.html" class=sidebar>film</a><br>
-			<a href="../projects/projects.html" class=sidebar>projects</a><br>
+			<a href="../project/project.html" class=sidebar>projects</a><br>
 			<a href="../photo/photo.html" class=sidebar>photo</a><br>
 		</div>
 
@@ -22,14 +22,17 @@
 			<p id=copy>*Click on any of the photos to read my opinions.</p>
 
 		<h3>Favorite films:</h3>
-			<a href="her.html"><img src="photos/her.jpg"/></a>  
-			<img src="photos/lost.jpg"/>  
-			<img src="photos/grand.jpg"/>  <!-- i'm totally not an existentialist. --> 
+			<a href="her.html"><img src="photos/her.jpg" class=movie></a>  
+			<img src="photos/lost.jpg" class=movie>  
+			<img src="photos/grand.jpg" class=movie>
+			<span class="stretch"></span> 
+			<!-- i'm totally not an existentialist. --> 
 
 		<h3>Recently watched:</h3>
-			<img src="photos/moonlight.jpg"/>
-			<img src="photos/arrival.jpg"/>
-			<img src="photos/strange.jpg"/>
+			<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjMxOTM1OTI4MV5BMl5BanBnXkFtZTgwODE5OTYxMDI@._V1_SY1000_CR0,0,674,1000_AL_.jpg" class=movie>
+			<img src="photos/moonlight.jpg" class=movie>
+			<img src="photos/arrival.jpg" class=movie>
+			<span class="stretch"></span> 
 
 		<h3><a href="archives.html">Archives</h3></a>
 		
