--- a/project/project.html
+++ b/project/project.html
@@ -16,17 +16,20 @@
 			<a href="../photo/photo.html" class=sidebar>photo</a><br>
 		</div>
 	<h1>Projects</h1>
-	<p>In my spare time, I enjoy designing various projects that involve statistics and machine learning. I've recently started pursuing this field this year, so there will be more projects to come!</p>
+	<p>In my spare time, I've been self-studying concepts regarding intermediate statistics and machine learning. Here, you will see a portfolio of what I've done so far. I've recently started programming this year, so there will be more projects to come!</p>
 
-	<h2>Discord Bot</h2>
-	<p>With a team of three, we built an interactive bot, written in Python, intended for use on the application <b>Discord.</b> The bot joins a channel of its choice and can interact with guests by playing Hangman, Magic 8 Ball, Guessing Game, and more. It also gathers random images from Google and posts them in the channel by request.</p>
+	<h2>Discord</h2>
+	<table width=100%><tr>
+	<td><img src="photos/discord.png" class=project></td>
+	<td style="padding-left: 5%" valign=top><p>I built an interactive bot, written in Python, intended for use on the application <b>Discord.</b> The bot joins a channel of its choice and can interact with guests by playing Hangman, Magic 8 Ball, Guessing Game, and more. It also gathers random images from Google and posts them in the channel by request.</p></td></tr></table>
 
-	<h2>KarmaBot</h2>
-	<p>Under a team of six, written in Python, we designed a bot that processes comment and post information on Reddit. It uses markov chains and other algorithms in order to learn how to make comments and posts of their own. The bot's purpose is to gain the most upvotes.</p>
-	<!-- 
-		project ideas: make a bot that learns text/spam
-		long-term: master python, R, matlab; learn more cs
-	-->
+	<h2>Reddit</h2>
+	<table width=100%><tr>
+	<td><img src="photos/reddit.png" class=project></td>
+	<td style="padding-left:5%" valign=top><p>I helped write a <b>Reddit</b> bot in Python. It processes Reddit's comment database, formatted by JSON, and then learns how to create original content from such by using recurrent neural networks and more specifically a Sequence-to-Sequence model, given both the TensorFlow and PRAW API.</p></td></tr></table>
+
+	<h2>restock.</h2>
+	<p>I created a script that notifies me automatically by e-mail if there is any change in a given website. I originally used this in order to keep track of sneaker and limited clothing updates regarding several brands.</p>
 	</div>
 	<script src="../core.js"></script>
 	</body>
