--- a/film/archives.html
+++ b/film/archives.html
@@ -2,7 +2,7 @@
 <!-- hi to those of you who read html comments
 	this is totally not my first website :^) -->
 	<head>
-		<link rel="stylesheet" type="text/css" href="../style.css"/>
+		<link rel="stylesheet" type="text/css" href="../stylin.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>archive</title>
@@ -12,7 +12,7 @@
 		<div id=sidebar>
 			<a href="../index.html" class=sidebar>home</a><br>
 			<a href="film.html" class=sidebar>film</a><br>
-			<a href="../projects/projects.html" class=sidebar>projects</a><br>
+			<a href="../project/project.html" class=sidebar>projects</a><br>
 			<a href="../photo/photo.html" class=sidebar>photo</a><br>
 		</div>
 
