--- a/film/gonegirl.html
+++ b/film/gonegirl.html
@@ -2,7 +2,7 @@
 <!-- hi to those of you who read html comments
 	this is totally not my first website :^) -->
 	<head>
-		<link rel="stylesheet" type="text/css" href="../style.css"/>
+		<link rel="stylesheet" type="text/css" href="../stylin.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>gone girl</title>
