--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- hi to those of you who read html comments
 	this is totally not my first website :^) -->
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="stylin.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>alan</title>
@@ -19,11 +19,12 @@
 		<h1>Alan Nguyen</h1>
 		<p>Hello there! I'm a second-year undergraduate student based in the San Francisco Bay Area. My main interests lie in Statistics, Economics, and Film.</p>
 
-		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. In here, you will see a collection of recent films that I have past watched, as well as a portfolio of the past photos I have recently taken.</p>
+		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. In here, you will see a collection of recent films that I've past watched, as well as a portfolio of my most recent photos.</p>
 
-		<p>I am also deeply vested in the realm of numbers, where I enjoy pondering about the infinite stacks of data that we face today. The projects that I participated in are articulated in its respective section. I hope to decipher what that data really means, and make an impact on <i>our</i> world, someday.</p>
+		<p>I am also deeply vested in the realm of numbers, where I enjoy pondering about the infinite stacks of data that we face today. I hope to decipher what that data really means, someday.</p>
 
-		<p id=copy>Copyright © All rights reserved.</p>
+		<!--<p id=copy>Copyright © All rights reserved.</p>
+		is this really necessary? -->
 	</div>
 	<script src="core.js"></script>
 	</body>
