--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 		</div>
 
 		<h1>Alan Nguyen</h1>
-		<p>Hello there! I'm a second-year undergraduate student based in the San Francisco Bay Area. My main interests lie in Statistics, Economics, and Film.</p>
+		<p>Hello there! I'm a second-year undergraduate student based in the San Francisco Bay Area. My main interests primarily lie in statistics and film. I am deeply passionate about the application of data and mathematics towards real life situations such as economics. </p>
 
-		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express oneself. In here, you will see a collection of recent films that I've past watched, as well as a portfolio of my most recent photos.</p>
+		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express myself. In here, you will see a collection of recent films that I've past watched, as well as a portfolio of my most recent photos.</p>
 
-		<p>I am also deeply vested in the realm of numbers, where I enjoy pondering about the infinite stacks of data that we face today. I hope to decipher what that data really means, someday.</p>
-
+		<p>Enjoy your stay!</p>
 		<!--<p id=copy>Copyright © All rights reserved.</p>
 		is this really necessary? -->
 	</div>
