added optimal browsers for viewing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<p>I consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express myself. In here, you will see a collection of recent films that I've past watched, as well as a portfolio of my most recent photos.</p>
 
-		<p>Enjoy your stay!</p>
+		<p>This website is best viewed in Chrome or Firefox. Enjoy your stay!</p>
 		<!--<p id=copy>Copyright © All rights reserved.</p>
 		is this really necessary? -->
 	</div>
