Changed JSON to SQLite for Reddit

--- a/project/project.html
+++ b/project/project.html
@@ -26,7 +26,7 @@
 	<h2>Reddit</h2>
 	<table width=100%><tr>
 	<td><img src="photos/reddit.png" class=project></td>
-	<td style="padding-left:5%" valign=top><p>I helped write a <b>Reddit</b> bot in Python. It processes Reddit's comment database, formatted by JSON, and then learns how to create original content from such by using recurrent neural networks and more specifically a Sequence-to-Sequence model, given both the TensorFlow and PRAW API.</p></td></tr></table>
+	<td style="padding-left:5%" valign=top><p>I helped write a <b>Reddit</b> bot in Python. It processes Reddit's comment database, formatted by SQLite, and then learns how to create original content from such by using recurrent neural networks and more specifically a Sequence-to-Sequence model, given both the TensorFlow and PRAW API.</p></td></tr></table>
 
 	<h2>restock.</h2>
 	<p>I created a script that notifies me automatically by e-mail if there is any change in a given website. I originally used this in order to keep track of sneaker and limited clothing updates regarding several brands.</p>
