--- a/film/film.html
+++ b/film/film.html
@@ -23,20 +23,23 @@
 
 		<h3>Favorite films:</h3>
 			<a href="her.html"><img src="photos/her.jpg" class=movie></a>  
-			<img src="photos/lost.jpg" class=movie>  
-			<img src="photos/grand.jpg" class=movie>
+			<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMzUzNDM2NzM2MV5BMl5BanBnXkFtZTgwNTM3NTg4OTE@._V1_SY1000_SX675_AL_.jpg" class=movie>  
+			<img src="photos/lost.jpg" class=movie>
 			<span class="stretch"></span> 
 			<!-- i'm totally not an existentialist. --> 
 
+		<!-- removing this because i've been on a HUGE movie binge lately, will perhaps revisit if i
+			ever get the chance to learn backend web dev.
+			
 		<h3>Recently watched:</h3>
 			<img src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjMxOTM1OTI4MV5BMl5BanBnXkFtZTgwODE5OTYxMDI@._V1_SY1000_CR0,0,674,1000_AL_.jpg" class=movie>
 			<img src="photos/moonlight.jpg" class=movie>
 			<img src="photos/arrival.jpg" class=movie>
-			<span class="stretch"></span> 
+			<span class="stretch"></span> -->
 
 		<h3><a href="archives.html">Archives</h3></a>
 		
-		<p id=copy>Feel free to visit my letterbloxd profile <u><a href="http://letterboxd.com/carbine/">here!</a></u></p>
+		<p id=copy>Feel free to visit my letterbloxd profile <u><a href="http://letterboxd.com/carbine/">here</a></u> to see what I've been recently watching!</p>
 	</div>
 	<script src="../core.js"></script>
 	</body>
