--- a/photo/photo.html
+++ b/photo/photo.html
@@ -25,11 +25,11 @@
 
 		
 		<img src="photos/long.jpg" class=portfolio>
-		<img src="photos/lalaland.jpg" class=portfolio>
+		<img src="http://i.imgur.com/nz6uNj0.jpg" class=portfolio> <!-- cps -->
 		<img src="photos/escalator.jpg" class=portfolio>
 		<img src="photos/tiff.jpg" class=portfolio>
 		<img src="photos/fleet.jpg" class=portfolio>
-		<img src="photos/cami.jpg" class=portfolio>
+		<img src="http://i.imgur.com/58UCJGe.jpg" class=portfolio> <!-- boat -->
 
 
 		<!-- 
