--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 		</div>
 
 		<h1>Alan Nguyen</h1>
-		<p>Hello there! I'm a third-year undergraduate student currently based in the San Francisco Bay Area. My main interests primarily lie in both mathematics and computer science. I am deeply passionate about artificial intelligence and machine learning, and hope to apply them onto fields like technology and finance!
+		<p>Hello there!</p>
 
-		<p>I also consider the visual arts my guilty pleasure; photography and film in its entirety are two ways to truly express myself. In here, you will see a collection of recent films that I've past watched, as well as a portfolio of my most recent photos.</p>
+		<p>I'm a second-year undergraduate student currently based in the San Francisco Bay Area. My main interests primarily lie in both mathematics and computer science. I am deeply passionate about artificial intelligence and machine learning, and hope to apply them onto fields like technology and finance!</p>
+
+		<p>I also consider the arts my guilty pleasure. In here, you will see a collection of recent films that I've past watched, as well as a portfolio of my most recent photos.</p>
 
 		<p>This website is best viewed in Chrome or Firefox. Enjoy your stay!</p>
 		<!--<p id=copy>Copyright © All rights reserved.</p>
