--- a/film/film.html
+++ b/film/film.html
@@ -4,17 +4,26 @@
 	this is totally not my first website :^) -->
 	<head>
 		<link rel="stylesheet" type="text/css" href="../stylin.css"/>
+		<link rel="stylesheet" type="text/css" href="../animate.css"/>
+		<link rel="stylesheet" type="text/css" href="../icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>film</title>
 	</head>
-	<body>
+	<body class="animated fadeInLeft">
 		<div class=wrapper>
 		<div id=sidebar>
+			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
 			<a href="../index.html" class=sidebar>home</a><br>
-			<a href="film.html" class=sidebar>film</a><br>
 			<a href="../project/project.html" class=sidebar>projects</a><br>
-			<a href="../photo/photo.html" class=sidebar>photo</a><br>
+			<a href="film.html" class=sidebar>film</a><br>
+			<!-- <a href="../photo/photo.html" class=sidebar>photo</a><br> -->
+
+			<a href="http://facebook.com/nalan296"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+			<a href="http://instagram.com/alanhoodie"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+			<a href="http://github.com/stylate"><i class="fa fa-github fa-fw" aria-hidden="true"></i></a>
+			<a href="http://letterboxd.com/carbine/"><i class="fa fa-film fa-fw" aria-hidden="true"></i></a>
+			<a href="mailto:nguyenalan@berkeley.edu"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i></a>
 		</div>
 
 		<h2>Film</h2>
@@ -37,9 +46,11 @@
 			<img src="photos/arrival.jpg" class=movie>
 			<span class="stretch"></span> -->
 
+
+		<!--
 		<h3><a href="archives.html">Archives</h3></a>
 		
-		<p id=copy>Feel free to visit my letterbloxd profile <u><a href="http://letterboxd.com/carbine/">here</a></u> to see what I've been recently watching!</p>
+		<p id=copy>Feel free to visit my letterbloxd profile <u><a href="http://letterboxd.com/carbine/">here</a></u> to see what I've been recently watching!</p> -->
 	</div>
 	<script src="../core.js"></script>
 	</body>
