--- a/index.html
+++ b/index.html
@@ -3,28 +3,46 @@
 	this is totally not my first website :^) -->
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylin.css"/>
+		<link rel="stylesheet" type="text/css" href="animate.css"/>
+		<link rel="stylesheet" type="text/css" href="icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>alan</title>
 	</head>
 	<body>
 		<div class=wrapper>
-		<div id=sidebar>
+		<div id=sidebar class="animated fadeInLeft">
+			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
 			<a href="index.html" class=sidebar>home</a><br>
-			<a href="film/film.html" class=sidebar>film</a><br>
 			<a href="project/project.html" class=sidebar>projects</a><br>
-			<a href="photo/photo.html" class=sidebar>photo</a><br>
+			<a href="film/film.html" class=sidebar>film</a><br>
+
+			<!-- 
+			open up this section again once i actually get a /decent/ portfolio going.
+
+			<a href="photo/photo.html" class=sidebar>photo</a><br> -->
+
+			<a href="http://instagram.com/alanhoodie"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+			<a href="http://github.com/stylate"><i class="fa fa-github fa-fw" aria-hidden="true"></i></a>
+			<a href="http://letterboxd.com/carbine/"><i class="fa fa-film fa-fw" aria-hidden="true"></i></a>
+			<a href="mailto:nguyenalan@berkeley.edu"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i></a>
 		</div>
 
-		<h1>Alan Nguyen</h1>
+
 		<p>Hello there!</p>
 
-		<p>I'm a second-year undergraduate student currently based in the San Francisco Bay Area. My main interests primarily lie in both mathematics and computer science. I am deeply passionate about artificial intelligence and machine learning, and hope to apply them onto fields like technology and finance!</p>
+		<p>I'm an incoming third-year undergraduate student currently based in Berkeley, CA. I enjoy pondering about artificial intelligence and cool math concepts. I like watching and talking about films and TV shows. I take pictures of people and things sometimes, too.</p>
 
-		<p>I also consider the arts my guilty pleasure. In here, you will see a collection of recent films that I've past watched, as well as a portfolio of my most recent photos.</p>
 
+		<!--
+		edu
+
+
+		-->
+
+		<!--
 		<p>This website is best viewed in Chrome or Firefox. Enjoy your stay!</p>
-		<!--<p id=copy>Copyright © All rights reserved.</p>
+		<p id=copy>Copyright © All rights reserved.</p>
 		is this really necessary? -->
 	</div>
 	<script src="core.js"></script>
