--- a/photo/photo.html
+++ b/photo/photo.html
@@ -3,6 +3,7 @@
 	this is totally not my first website :^) -->
 	<head>
 		<link rel="stylesheet" type="text/css" href="../stylin.css"/>
+		<link rel="stylesheet" type="text/css" href="../icons/css/font-awesome.css"/>
 		<link rel="icon" href="http://www.beautycolorcode.com/f9f8fa-2880x1800.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<title>photo</title>
@@ -10,10 +11,16 @@
 	<body>
 		<div class=wrapper>
 		<div id=sidebar>
+			<a class=sidebar style="font-size:24px">alan nguyen</a><br>
 			<a href="../index.html" class=sidebar>home</a><br>
 			<a href="../film/film.html" class=sidebar>film</a><br>
 			<a href="../project/project.html" class=sidebar>projects</a><br>
 			<a href="photo.html" class=sidebar>photo</a><br>
+
+			<a href="http://facebook.com/nalan296"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+			<a href="http://instagram.com/alanhoodie"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+			<a href="http://letterboxd.com/carbine/"><i class="fa fa-film fa-fw" aria-hidden="true"></i></a>
+			<a href="mailto:nguyenalan@berkeley.edu"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i></a>
 		</div>
 
 		<h1>Photos</h1>
@@ -21,7 +28,7 @@
 
 		<p>But in here, you'll just see a photo dump of everything I've taken recently.</p>
 
-		<p id=copy>Note: All photos below have been edited with VSCOCam/Adobe Lightroom. Feel free to visit my instagram <u><a href="http://instagram.com/niggalan">here!</u></a></p>
+		<p id=copy>Note: All photos below have been edited with VSCOCam/Adobe Lightroom.</p>
 
 		
 		<img src="photos/long.jpg" class=portfolio>
